--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dronesmith USA — NDAA‑Compliant Drone Motors</title>
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/TheDronesmith/dronesmith-site/main/favicon.ico">
   <meta name="description" content="U.S.-made, NDAA-compliant drone motors for enterprise, public safety, and defense-grade UAVs. Request samples or take our short motor-size poll." />
   <style>
     :root{--accent:#0f62fe;--bg:#0f1724;--muted:#94a3b8;--card:#0b1220}
