--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="h-16 flex items-center justify-between">
         <a href="#" class="flex items-center gap-3">
-          <span class="bg-white rounded-full p-1 ring-1 ring-white/20">
-            <img src="./logo.png" alt="Dronesmith USA logo" class="h-8 w-8 rounded-full" />
-          </span>
+          <img src="./logo.png" alt="Dronesmith USA logo" class="h-8 w-8 rounded-full" />
           <span class="text-xl font-semibold tracking-tight">Dronesmith USA</span>
         </a>
         <nav class="hidden md:flex items-center gap-8 text-sub">
@@ -207,7 +205,7 @@
         <p class="mt-4 text-sub">We’re focused on building American-made motors that remove supply chain risk for mission-critical platforms. Our goal is to deliver performance on par with the best on the market while ensuring transparent, compliant sourcing.</p>
       </div>
       <div class="flex items-center gap-6">
-        <span class="bg-white rounded-full p-1 ring-1 ring-white/20"><img src="./logo.png" alt="Dronesmith USA logo" class="h-20 w-20 rounded-full"></span>
+        <img src="./logo.png" alt="Dronesmith USA logo" class="h-20 w-20 rounded-full">
         <div class="text-sm text-sub">Virginia, USA • Defense & Government UAV Components</div>
       </div>
     </div>
@@ -240,7 +238,7 @@
   <footer class="border-t border-white/10">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 flex flex-col sm:flex-row items-center justify-between gap-4 text-sub">
       <div class="flex items-center gap-3">
-        <span class="bg-white rounded-full p-1 ring-1 ring-white/20"><img src="./logo.png" alt="Dronesmith USA logo" class="h-8 w-8 rounded-full" /></span>
+        <img src="./logo.png" alt="Dronesmith USA logo" class="h-8 w-8 rounded-full" />
         <span class="text-sm">© <span id="year"></span> Dronesmith USA — NDAA-Compliant Motors</span>
       </div>
       <div class="text-sm flex items-center gap-4">
