--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
           <a href="#motors" class="inline-flex items-center rounded-xl bg-accent px-5 py-3 text-white font-medium shadow-soft hover:brightness-110">See Our Motors</a>
           <a href="#contact" class="inline-flex items-center rounded-xl border border-white/20 px-5 py-3 font-medium hover:bg-white/5">Request a Quote</a>
         </div>
-        <div class="mt-6 grid grid-cols-1 sm:grid-cols-3 gap-3 text-sm text-sub">
+        <!-- <div class="mt-6 grid grid-cols-1 sm:grid-cols-3 gap-3 text-sm text-sub"> -->
+        <div class="mt-6 flex items-center gap-6 text-sm text-sub">
           <div class="flex items-center gap-2"><span class="h-2.5 w-2.5 rounded-full bg-green-500"></span> NDAA §889 compliant</div>
           <div class="flex items-center gap-2"><span class="h-2.5 w-2.5 rounded-full bg-green-500"></span> US manufacturing</div>
           <div class="flex items-center gap-2"><span class="h-2.5 w-2.5 rounded-full bg-green-500"></span> Defense-focused QA</div>
