--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
           <span class="text-xl font-semibold tracking-tight">Dronesmith <span class="inline-flex items-center">USA<img src="https://upload.wikimedia.org/wikipedia/en/a/a4/Flag_of_the_United_States.svg" alt="US flag" class="h-6 w-auto ml-2" /></span></span>
         </a>
         <nav class="hidden md:flex items-center gap-8 text-sub">
-          <a href="#motors" class="hover:text-white">Motors</a>
           <a href="#compliance" class="hover:text-white">NDAA Compliance</a>
-          <a href="#quality" class="hover:text-white">Quality & Testing</a>
           <a href="#about" class="hover:text-white">About</a>
           <a href="#contact" class="hover:text-white">Contact</a>
           <a href="#motors" class="ml-4 inline-flex items-center rounded-xl bg-accent px-4 py-2 text-white font-medium shadow-soft hover:brightness-110">See Our Motors</a>
@@ -45,9 +43,7 @@
       </div>
       <div id="mobileNav" class="md:hidden hidden pb-4">
         <div class="grid gap-2 text-sub">
-          <a href="#motors" class="px-2 py-2 rounded-md hover:bg-white/5">Motors</a>
           <a href="#compliance" class="px-2 py-2 rounded-md hover:bg-white/5">NDAA Compliance</a>
-          <a href="#quality" class="px-2 py-2 rounded-md hover:bg-white/5">Quality & Testing</a>
           <a href="#about" class="px-2 py-2 rounded-md hover:bg-white/5">About</a>
           <a href="#contact" class="px-2 py-2 rounded-md hover:bg-white/5">Contact</a>
           <a href="#motors" class="mt-2 inline-flex items-center justify-center rounded-xl bg-accent px-4 py-2 text-white font-medium shadow-soft">See Our Motors</a>
@@ -206,20 +202,47 @@
         <h2 class="text-2xl md:text-3xl font-bold">Request information or a quote</h2>
         <p class="mt-2 text-sub">Tell us about your platform and requirements. We’ll follow up with lead times and integration details.</p>
       </div>
-      <form name="rfq" method="POST" data-netlify="true" class="mt-8 grid grid-cols-1 gap-4 bg-white/5 p-6 rounded-2xl shadow-soft border border-white/10">
+      <form name="rfq" method="POST" data-netlify="true" class="mt-8 grid grid-cols-1 gap-4 bg-white/5 p-6 rounded-2xl shadow-soft border border-white/10" method="POST" data-netlify="true" netlify-honeypot="bot-field" data-netlify-recaptcha="true" enctype="multipart/form-data"><div class="hidden"><label>Don’t fill this out if you’re human: <input name="bot-field" /></label></div>
+
         <input type="hidden" name="form-name" value="rfq" />
         <div class="grid md:grid-cols-2 gap-4">
-          <div><label class="block text-sm text-sub mb-1">Name</label><input required name="name" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" /></div>
-          <div><label class="block text-sm text-sub mb-1">Organization</label><input name="org" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" /></div>
+          <div><label class="block text-sm text-sub mb-1">Name</label><input required name="name" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" / required aria-required="true">
+<div id="err-name" class="mt-1 hidden text-sm text-red-400 bg-red-400/10 border border-red-400/30 rounded-lg px-2 py-1"></div></div>
+          <div><label class="block text-sm text-sub mb-1">Organization</label><input name="org" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" / required aria-required="true">
+<div id="err-org" class="mt-1 hidden text-sm text-red-400 bg-red-400/10 border border-red-400/30 rounded-lg px-2 py-1"></div></div>
         </div>
         <div class="grid md:grid-cols-2 gap-4">
-          <div><label class="block text-sm text-sub mb-1">Email</label><input required name="email" type="email" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" /></div>
-          <div><label class="block text-sm text-sub mb-1">Phone</label><input name="phone" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" /></div>
+          <div><label class="block text-sm text-sub mb-1">Email</label><input required name="email" type="email" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" / required aria-required="true">
+<div id="err-email" class="mt-1 hidden text-sm text-red-400 bg-red-400/10 border border-red-400/30 rounded-lg px-2 py-1"></div></div>
+          <div><label class="block text-sm text-sub mb-1">Phone (optional)</label><input name="phone" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" /></div>
         </div>
-        <div><label class="block text-sm text-sub mb-1">Program or Use Case</label><input name="use_case" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" /></div>
-        <div><label class="block text-sm text-sub mb-1">Message</label><textarea name="message" rows="5" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" placeholder="Desired motor size/KV, voltage, thrust target, quantity, timeline"></textarea></div>
+        <div><label class="block text-sm text-sub mb-1">Program or Use Case (optional)</label><input name="use_case" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" /></div>
+        <div><label class="block text-sm text-sub mb-1">Message</label><textarea name="message" rows="5" class="w-full rounded-lg border border-white/10 bg-black/20 px-3 py-2 text-white" placeholder="Desired motor size/KV, voltage, thrust target, quantity, timeline" required aria-required="true"></textarea>
+<div id="err-message" class="mt-1 hidden text-sm text-red-400 bg-red-400/10 border border-red-400/30 rounded-lg px-2 py-1"></div></div>
+
+
+<div class="mt-4">
+  <label class="block text-sm text-sub mb-1">NDA Upload (optional)</label>
+  <div class="relative rounded-xl border border-white/10 bg-white/5 p-3">
+    <input id="ndaFile" name="nda_upload" type="file" accept="application/pdf" class="sr-only">
+    <div class="flex items-center">
+      <button type="button" id="ndaBtn" class="inline-flex items-center rounded-xl border border-white/20 bg-white/10 px-4 py-2 text-sm hover:bg-white/15">
+        Choose PDF
+      </button>
+      <span id="ndaFilename" class="ml-3 text-sm text-sub truncate">No file selected</span>
+    </div>
+  </div>
+  <p class="mt-1 text-xs text-sub">PDF only, max 10 MB.</p>
+</div>
         <div class="flex justify-end"><button class="inline-flex items-center rounded-xl bg-accent px-5 py-3 text-white font-medium shadow-soft hover:brightness-110" type="submit">Send Request</button></div>
       </form>
+<div id="rfqSuccess" class="mt-4 hidden text-sm flex items-center gap-2 text-green-400 bg-green-400/10 border border-green-400/30 rounded-lg p-3">
+  <svg id="successCheck" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 opacity-0 transform scale-50 transition-all duration-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+  </svg>
+  <span>Thanks — your request was received. We’ll reply within 1–2 business days.</span>
+</div>
+
       <p class="mt-3 text-center text-xs text-sub">Submitting this form will email our team. We’ll respond within 1–2 business days.</p>
     </div>
   </section>
@@ -232,7 +255,6 @@
       </div>
       <div class="text-sm flex items-center gap-4">
         <a href="#compliance" class="hover:text-white">Compliance</a>
-        <a href="#motors" class="hover:text-white">Motors</a>
         <a href="#contact" class="hover:text-white">Contact</a>
       </div>
     </div>
@@ -242,5 +264,120 @@
     const menuBtn=document.getElementById('menuBtn');const mobileNav=document.getElementById('mobileNav');if(menuBtn)menuBtn.addEventListener('click',()=>mobileNav.classList.toggle('hidden'));
     document.getElementById('year').textContent=new Date().getFullYear();
   </script>
+
+
+
+
+
+
+
+<script>
+(function(){
+  const form = document.querySelector('form[name="rfq"]');
+  if(!form) return;
+
+  // Fields & error nodes
+  const fields = [
+    { name: 'name',    label: 'Name',        msg: 'Please enter your name.' },
+    { name: 'org',     label: 'Organization',msg: 'Please enter your organization.' },
+    { name: 'email',   label: 'Email',       msg: 'Please enter a valid email address.', email: true },
+    { name: 'message', label: 'Message',     msg: 'Please enter your message.' }
+  ];
+
+  function showError(fieldName, text){
+    const err = document.getElementById('err-' + fieldName);
+    if(err){
+      err.textContent = text;
+      err.classList.remove('hidden');
+    }
+  }
+  function clearErrors(){
+    fields.forEach(f=>{
+      const err = document.getElementById('err-' + f.name);
+      if(err) err.classList.add('hidden');
+      const input = form.querySelector('[name="'+f.name+'"]');
+      if(input) input.removeAttribute('aria-invalid');
+    });
+  }
+
+  function validate(){
+    clearErrors();
+    let firstInvalid = null;
+    fields.forEach(f=>{
+      const el = form.querySelector('[name="'+f.name+'"]');
+      if(!el) return;
+      let val = (el.value || '').trim();
+      let ok = true;
+      if(!val) ok = false;
+      if(ok && f.email){
+        ok = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(val);
+      }
+      if(!ok){
+        showError(f.name, f.msg);
+        el.setAttribute('aria-invalid', 'true');
+        if(!firstInvalid) firstInvalid = el;
+      }
+    });
+    return firstInvalid;
+  }
+
+  // Wire custom file UI (if present)
+  const ndaInput = form.querySelector('#ndaFile');
+  const ndaBtn = form.querySelector('#ndaBtn');
+  const ndaName = form.querySelector('#ndaFilename');
+  if(ndaBtn && ndaInput){
+    ndaBtn.addEventListener('click', ()=> ndaInput.click());
+    ndaInput.addEventListener('change', ()=>{
+      ndaName.textContent = (ndaInput.files && ndaInput.files[0]) ? ndaInput.files[0].name : 'No file selected';
+    });
+  }
+
+  const success = document.getElementById('rfqSuccess');
+  const check = document.getElementById('successCheck');
+
+  form.addEventListener('submit', async function(e){
+    e.preventDefault();
+    const firstInvalid = validate();
+    if(firstInvalid){
+      firstInvalid.scrollIntoView({ behavior:'smooth', block:'center' });
+      firstInvalid.focus({ preventScroll:true });
+      return;
+    }
+
+    // Honeypot check
+    const hp = form.querySelector('[name="bot-field"]');
+    if(hp && hp.value) return;
+
+    const btn = form.querySelector('button[type="submit"]');
+    if(btn){ btn.disabled = true; btn.textContent = 'Sending…'; }
+
+    try {
+      const data = new FormData(form);
+      const resp = await fetch("/", { method: "POST", body: data });
+      if(resp.ok){
+        if(success){
+          success.classList.remove('hidden');
+          setTimeout(()=>{
+            if(check){
+              check.classList.remove('opacity-0','scale-50');
+              check.classList.add('opacity-100','scale-100');
+            }
+          }, 100);
+          success.scrollIntoView({behavior:'smooth', block:'center'});
+        }
+        form.reset();
+        if(ndaName) ndaName.textContent = 'No file selected';
+      } else {
+        form.submit(); // Fallback to Netlify (may trigger captcha/redirect)
+      }
+    } catch(err){
+      form.submit();
+    } finally {
+      if(btn){ btn.disabled = false; btn.textContent = 'Send Request'; }
+    }
+  });
+})();
+</script>
+
 </body>
 </html>
